Fix score title on mobile

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -51,4 +51,10 @@ footer {
   main {
     grid-template-columns: repeat(2, 200px);
   }
+
+  header {
+    display: flex;
+    flex-direction: column;
+    margin: 30px 0;
+  }
 }
