--- a/src/styles/ScoreHeader.css
+++ b/src/styles/ScoreHeader.css
@@ -1,3 +1,4 @@
 .score {
   font-size: 2rem;
+  margin: 20px;
 }
